--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,23 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
 
-body{
-    background: #454545;
-    color: #fff;
-}
-.code-editors-container{
-    width: 100%;
-    height: 100vh;
-    padding: 20px;
-    display: flex;
-}
-.left,.right{
-    flex-basis: 50%;
-    padding:10px;
+.output{
+    
 }
 textarea{
     width: 100%;
@@ -38,4 +21,8 @@ label{
     align-items: center;
     background: #000;
     height: 30px;
+}
+.iframe{
+    background: #fff;
+    height:100%;
 }
