--- a/src/App.css
+++ b/src/App.css
@@ -14,5 +14,6 @@ body{
   padding:10px;
   display: flex;
   align-items: center;
-  flex-direction: column;
+  gap: 20px;
+  justify-content: space-around;
 }
