--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,16 +1,7 @@
 
 .output{
-    
-}
-textarea{
-    width: 100%;
-    height: 28%;
-    background: #1f1f1f;
-    color: #fff;
-    border: 0;
-    padding: 10px 20px;
-    outline: 0;
-    font-size: 18px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 .icon{
     margin-left: 10px;
@@ -24,5 +15,6 @@ label{
 }
 .iframe{
     background: #fff;
-    height:100%;
+    height:270px;
+    color: black;
 }
