--- a/src/components/HtmlEditor.css
+++ b/src/components/HtmlEditor.css
@@ -1,7 +1,5 @@
 .html-container{
-    width: 100%;
-    height: 100vh;
-    padding: 20px;
+    width:450px;
     display: flex;
     flex-direction: column;
   }
@@ -19,7 +17,7 @@
 }
 .html-code{
     width: 100%;
-    height: 28%;
+    height:400px;
     background: #1f1f1f;
     color: #fff;
     border: 0;
