--- a/src/components/JsEditor.css
+++ b/src/components/JsEditor.css
@@ -1,3 +1,9 @@
+.js-container{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+  }
+
 .js-label{
     display: flex;
     align-items: center;
@@ -10,7 +16,7 @@
 }
 .js-code{
     width: 100%;
-    height: 28%;
+    height:400px;
     background: #1f1f1f;
     color: #fff;
     border: 0;
