add a expand button

--- a/src/components/HtmlEditor.css
+++ b/src/components/HtmlEditor.css
@@ -8,7 +8,6 @@
 .html-label{
     display: flex;
     align-items: center;
-    background: #000;
     height: 30px;
 }
 .html-icon{
@@ -24,4 +23,10 @@
     padding: 10px 20px;
     outline: 0;
     font-size: 18px;
+}
+.expand{
+    display: flex;
+    background: #000;
+    align-items: center;
+    justify-content: space-between;
 }
